[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython', 'numpy']

[project]
name = "pymt_heatc"
description = "PyMT plugin for HeatC model"
version = "0.5.dev0"
readme = "README.rst"
authors = [
  {email = "mark.piper@colorado.edu"},
  {name = "Mark Piper"}
]
keywords = [
  "bmi",
  "csdms",
  "c",
  "model",
  "pymt",
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
  "bmipy",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "isort",
]
build = [
  "build",
  "twine",
  "zest.releaser"
]

[project.urls]
homepage = "https://csdms.colorado.edu"
documentation = "https://csdms.colorado.edu"
repository = "https://github.com/mdpiper/pymt_heatc"
changelog = "https://github.com/mdpiper/pymt_heatc/blob/main/CHANGES.rst"

[project.entry-points."pymt.plugins"]
HeatModelC = "pymt_heatc._bmi:HeatModelC"

[tool.ruff]
exclude = ["docs"]
line-length = 88
ignore = [
	"E203",
	"E501",
]

[tool.black]
exclude = "docs"

[tool.zest-releaser]
tag-format = "v{version}"
